fix title margin, rename a property, allow embeds as covers in agrument articles

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -56,6 +56,5 @@
     color: #ffffff;
     font-weight: 600;
     text-transform: uppercase;
-    margin-right: 4px;
   }
 }
